<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="@android:dimen/notification_large_icon_height"
        android:layout_height="@android:dimen/notification_large_icon_width"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingTop="@android:dimen/notification_large_icon_width">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/humidity_level"
                android:textSize="24sp"
                android:textStyle="bold"
                app:fontFamily="sans-serif" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="121dp"
                android:layout_height="91dp"
                android:layout_gravity="center"
                android:text="@string/_88"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                app:fontFamily="sans-serif" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/temperature_level"
                android:textSize="24sp"
                android:textStyle="bold|italic"
                app:fontFamily="sans-serif" />
            <TextView
                android:id="@+id/textView8"
                android:layout_width="121dp"
                android:layout_height="91dp"
                android:layout_gravity="center"
                android:text="@string/_87"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                app:fontFamily="sans-serif"
                />



        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/soil_moisture_level"
                android:textSize="24sp"
                android:textStyle="bold|italic"
                app:fontFamily="sans-serif" />
            <TextView
                android:id="@+id/textView9"
                android:layout_width="121dp"
                android:layout_height="91dp"
                android:layout_gravity="center"
                android:text="@string/_72"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                app:fontFamily="sans-serif" />

        </LinearLayout>


    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/navigation_menu"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        android:id="@+id/nv">

    </android.support.design.widget.NavigationView>



</android.support.v4.widget.DrawerLayout>