<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword"
    android:orientation="vertical"
    android:background="@drawable/background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="vertical"
            android:layout_marginTop="50dp">

        <ImageView
            android:layout_width="170dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/image"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="45dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/reenter_username"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:textColor="@color/colorHint"
                android:textSize="18sp"
                android:text="@string/please_enter_your_username_again_for_verification"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:id="@+id/usernameid"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textSize="21sp"
                android:hint="@string/username"
                android:drawableStart="@drawable/ic_action_name"
                android:paddingBottom="0dp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorHint"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorWhite"
                android:paddingTop="2dp" />

            <Button
                android:id="@+id/forgot_button"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:textSize="22sp"
                android:text="@string/submit"
                android:background="@color/colorAccent"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:id="@+id/backto_loginbutton"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:textSize="22sp"
                android:background="@color/colorBlue"
                android:text="@string/login"/>

        </LinearLayout>
        
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>