<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmationActivity"
    android:orientation="vertical"
    android:background="@drawable/background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="40dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/image" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="45dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/note"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:text="@string/please_enter_5_digit_code_sent_to_you_on_your_mobile_number"
                android:textSize="20sp"
                android:textColor="@color/colorWhite"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:id="@+id/code"
                android:textSize="21sp"
                android:paddingBottom="0dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textColor="@color/colorWhite"
                android:hint="@string/enter_your_code_here"
                android:textColorHint="@color/colorOffWhite" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorWhite"
                android:paddingTop="2dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:id="@+id/enter"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:background="@color/colorAccent"
                android:textColor="@color/colorWhite"
                android:text="@string/submit"/>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>